# robin-bazel

./: BUILD.bazel  README.md  bazel-bin  bazel-out  bazel-robin-bazel  bazel-testlogs  go.mod
cmd/robin/: BUILD.bazel  main.go
internal/calc/: BUILD.bazel  calc_test.go
