load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "robin_lib",
    srcs = ["main.go"],
    importpath = "github.com/loeffel-io/robin-bazel/cmd/robin",
    visibility = ["//visibility:private"],
    deps = ["//internal/calc"],
)

go_binary(
    name = "robin",
    embed = [":robin_lib"],
    visibility = ["//visibility:public"],
)
